# seek_and_destroy

./: README.md  default.ipynb  setup_session.sh  update_github.sh
install/: local_setup.sh  setup.sh
install/autonomous_exploration/lib/autonomous_exploration/: auto_map_saver  waypoint_explorer
install/autonomous_exploration/share/autonomous_exploration/: package.sh  package.xml
install/explore_lite/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
install/explore_lite/lib/explore_lite/: explore
install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/: default.ipynb  update_github.sh
src/autonomous_exploration/: setup.py
src/autonomous_exploration/autonomous_exploration/: auto_map_saver.py  waypoint_explorer.py
src/autonomous_exploration/launch/: autonomous_exploration.launch.py
src/saved_maps/: map1.pgm  map1.yaml  map2.yaml  map3.yaml  map4.yaml  map5.yaml
src/seek_and_destroy_brain/: package.xml  setup.cfg  setup.py
src/seek_and_destroy_brain/config/: targets.yaml
src/seek_and_destroy_brain/seek_and_destroy_brain/: color_detector.py  go_home.py  mission_gui.py  navigator.py  state_machine.py
src/seek_and_destroy_sim/: package.xml  setup.cfg  setup.py
src/seek_and_destroy_sim/config/: lab_world_gazebo.config  nav2_params.yaml
src/seek_and_destroy_sim/launch/: bringup.launch.py  mission.launch.py
src/seek_and_destroy_sim/seek_and_destroy_sim/: go_home.py
src/seek_and_destroy_sim/worlds/: lab.sdf  lab.world
src/seek_destroy/config/: nav2_default_view.rviz  nav2_params.yaml
src/seek_destroy/maps/: husarion_world_map.pgm  husarion_world_map.yaml  world_map.pgm  world_map.yaml
(+417 files in other folders)
